# ui-extractor

./: .gitignore  Cargo.toml  IMPLEMENTATION.md  PRODUCT.md  README.cn.md  README.md  build.rs
.cursor/: mcp.json
.github/workflows/: release.yml
android/: README.md
crates/ncnn-bind/: Cargo.toml
crates/ncnn-bind/src/: extractor.rs  ffi.rs  lib.rs  mat.rs  net.rs
dart/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
dart/android/: build.gradle
dart/android/src/main/: AndroidManifest.xml
dart/hook/: build.dart
dart/lib/: ui_extractor.dart
dart/lib/src/: assets.dart  config.dart  engine.dart  exceptions.dart  extract_output.dart  extract_timings.dart  ffi_bindings.dart  ffi_native.dart  ffi_types.dart  http_proxy.dart  native_library.dart  native_release.dart  native_release_fetch.dart  supported_target.dart
dart/test/: extract_timings_test.dart
dart/windows/: CMakeLists.txt
docs/: README.md  android.md  architecture.md  getting-started.md  models.md
docs/dev/: icon-matching.md  mdi-icons.md  rot-checklist.md  流程.md
include/: ui_extractor.h
mcp-server/: README.md  package-lock.json  package.json  tsconfig.json
mcp-server/src/: config.ts  index.ts
scripts/: build.ps1  build_android.ps1  build_release_android.ps1  build_release_windows.ps1  cargo_retry.ps1  convert_models_ncnn.ps1  download_icon_libraries.ps1  download_icons.ps1  download_infer_core_release.ps1  download_mdi_icons.ps1  download_mobileclip2.ps1  download_models.ps1  download_models_ncnn.ps1  download_ncnn_android.ps1  infer_core_release.ps1  infer_core_root.ps1  install_packs.ps1  prepare_release_assets.ps1  test_cases.ps1
scripts/packs/: release.ps1
src/: annotate.rs  cases.rs  engine.rs  error.rs  ffi.rs  lib.rs  main.rs  ort_runtime.rs  packs.rs  pipeline.rs  skeleton.rs  types.rs
src/icon/: build.rs  embed.rs  embedder_ncnn.rs  embedder_ort.rs  embedding.rs  library.rs  mod.rs  pack.rs  preprocess.rs  rasterize.rs
src/infer/: embed.rs  error.rs  ffi.rs  icon_index.rs  manifest.rs  mod.rs  ocr.rs  registry.rs  runtime.rs
src/infer/embed/: preprocess.rs
src/inference/: mod.rs  ncnn.rs
src/layout/: mod.rs  preprocess.rs  stages.rs  tree.rs
src/ocr/: mod.rs  ncnn.rs  ort.rs
tests/cases/arknights-base-construction/: output.json
tests/cases/arknights-level-selection/: output.json
tests/cases/arknights-main-ui/: output.json
tests/cases/arknights-terminal/: output.json
tests/cases/google-ai-mode/: output.json
tests/cases/zhihu/: output.json
