[package]
name = "ui-extractor"
version = "0.1.0"
edition = "2021"
description = "Extract UI element trees and text from screenshots for text-only LLMs"
license = "MIT"
build = "build.rs"

[lib]
name = "ui_extractor"
crate-type = ["rlib", "cdylib", "staticlib"]
path = "src/lib.rs"

[[bin]]
name = "ui-extractor"
path = "src/main.rs"

[features]
default = []
backend-ncnn = ["dep:ncnn-bind"]

[dependencies]
ab_glyph = "0.2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
image = "0.25"
imageproc = "0.25"
infer-core = { path = "../local-infer-core/crates/infer-core" }
ndarray = "0.16"
rayon = "1"
resvg = "0.47"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ncnn-bind = { path = "crates/ncnn-bind", optional = true }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1
