[package]
name = "ui-extractor"
version = "0.1.0"
edition = "2021"
description = "Extract UI element trees and text from screenshots for text-only LLMs"
license = "MIT"
build = "build.rs"

[lib]
name = "ui_extractor"
crate-type = ["rlib", "cdylib", "staticlib"]
path = "src/lib.rs"

[[bin]]
name = "ui-extractor"
path = "src/main.rs"

[features]
default = []

[dependencies]
infer-core = { git = "https://github.com/SuiltaPico/local-infer-core.git", tag = "v0.1.0", default-features = false, features = ["types-only"] }
ab_glyph = "0.2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
image = "0.25"
imageproc = "0.25"
ndarray = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1
